[package]
name = "the_last_hymn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "png",
    "multi-threaded",     # Run with multithreading
    "bevy_asset",         # Assets management
    "bevy_gilrs",         # Gamepad input support
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management (cross-platform Winit backend)
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gizmos",        # Support drawing debug lines and shapes
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_gltf",          # GLTF 3D assets format support
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "animation",          # Animation support
    "tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)
    "default_font",
] }
bevy_kira_audio = { version = "0.19", features = ["mp3", "wav"] }
bevy_rapier2d = "0.25"
itertools = "0.12.1"
bevy_ecs_tilemap = "0.12.0"
